@@ -4,7 +4,6 @@ import java.time.Duration;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 import sonmoeum.common.security.handler.CustomAccessDeniedHandler;
 import sonmoeum.common.security.handler.CustomAuthenticationEntryPoint;
 import sonmoeum.common.security.jwt.JwtAuthenticationFilter;
@@ -72,8 +71,8 @@ public class WebSecurityConfig {
             .authorizeHttpRequests(auth -> auth
                 // 문서/헬스체크
                 .requestMatchers("/actuator/**", "/v3/api-docs/**", "/swagger-ui/**", "/swagger-ui.html", "/swagger-ui").permitAll()
-                // 자체 인증 API 경로
-                .requestMatchers("/api/v1/auth/login", "/api/v1/auth/signup").permitAll()
+                // 인증 API (로그인, 회원가입, 토큰 재발급)
+                .requestMatchers("/api/v1/auth/login", "/api/v1/auth/signup", "/api/v1/auth/refresh").permitAll()
                 // 그 외는 인증 필요
                 .anyRequest().authenticated()
             )
@@ -93,7 +92,7 @@ public class WebSecurityConfig {
         List<String> origins = Arrays.stream(corsAllowedOrigins.split(","))
             .map(String::trim)
             .filter(s -> !s.isBlank())
-            .collect(Collectors.toList());
+            .toList();
 
         origins.forEach(config::addAllowedOrigin);
 
